Added EOS compatibility

--- a/ProgressionGear/Dependencies.props
+++ b/ProgressionGear/Dependencies.props
@@ -36,5 +36,6 @@
 		<Reference Include="$(PluginsFolder)/GTFO-API.dll" Private="false" />
 		<Reference Include="$(PluginsFolder)\**\MTFO.dll" Private="false" />
 	    <Reference Include="$(PluginsFolder)\**\Inas07.LocalProgression.dll" Private="false" />
+		<Reference Include="$(PluginsFolder)\**\Inas07.ExtraObjectiveSetup.dll" Private="false" />
 	</ItemGroup>
 </Project>
