--- a/ProgressionGear/Dependencies.props
+++ b/ProgressionGear/Dependencies.props
@@ -35,6 +35,7 @@
 	<ItemGroup>
 		<Reference Include="$(PluginsFolder)/GTFO-API.dll" Private="false" />
 		<Reference Include="$(PluginsFolder)\**\MTFO.dll" Private="false" />
+		<Reference Include="$(PluginsFolder)\**\AWOPartialDataFixer.dll" Private="false" />
 	    <Reference Include="$(PluginsFolder)\**\Inas07.LocalProgression.dll" Private="false" />
 	</ItemGroup>
 </Project>
